# torch_brain

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  GLOSSARY.md  GOVERNANCE.md  MANIFEST.in  README.md  RELEASE.md  environment.yaml  pyproject.toml  pytest.ini  run_capoyo.sh  setup.py
.github/: release-drafter.yml
.github/workflows/: benchmarks.yml  linting.yml  pipeline_testing.yml  pipeline_testing_matrix.yml  publish.yml  release-drafter.yml  release.yml  test-kirby.yml  testing.yml  typecheck.yml
benchmarks/: benchmark.py  compare.py
brainsets/: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
brainsets/.github/workflows/: dandi_testing.yml  dandi_testing_matrix.yml  pipeline_testing.yml  pipeline_testing_matrix.yml  publish.yml  testing.yml
brainsets/brainsets/: __init__.py  core.py  descriptions.py  pipeline.py  runner.py
brainsets/brainsets/_cli/: cli.py  cli_config.py  cli_prepare.py  utils.py
brainsets/brainsets/datasets/: AllenVisualCodingOphys2016.py  ChurchlandShenoyNeural2012.py  FlintSlutzkyAccurate2012.py  KempSleepEDF2013.py  KlinzingSleepDS005555.py  KochiVisualNamingDS006914.py  Neuroprobe2025.py  OdohertySabesNonhuman2017.py  OpenNeuroDataset.py  PeiPandarinathNLB2021.py  PerichMillerPopulation2018.py  ShiraziHBNR1DS005505.py  VollanMoserAlternating2025.py  __init__.py  _utils.py
brainsets/brainsets/processing/: __init__.py  signal.py
brainsets/brainsets/taxonomy/: __init__.py  mice.py  recording_tech.py  subject.py  task.py
brainsets/brainsets/utils/: __init__.py  bids_utils.py  dandi_utils.py  dir_utils.py  mat_utils.py  misc_utils.py  mne_utils.py  s3_utils.py  split.py
brainsets/brainsets/utils/openneuro/: __init__.py  openneuro_s3.py  pipeline.py
brainsets/brainsets_pipelines/allen_visual_coding_ophys_2016/: Snakefile  pipeline.py  prepare_data.py  requirements.txt
brainsets/brainsets_pipelines/churchland_shenoy_neural_2012/: pipeline.py
brainsets/brainsets_pipelines/flint_slutzky_accurate_2012/: Snakefile  pipeline.py
brainsets/brainsets_pipelines/kemp_sleep_edf_2013/: pipeline.py
brainsets/brainsets_pipelines/kochi_visualnaming_ds006914/: pipeline.py
brainsets/brainsets_pipelines/neuroprobe_2025/: pipeline.py
brainsets/brainsets_pipelines/odoherty_sabes_nonhuman_2017/: pipeline.py  requirements.txt
brainsets/brainsets_pipelines/pei_pandarinath_nlb_2021/: pipeline.py  prepare_data.py  requirements.txt
brainsets/brainsets_pipelines/perich_miller_population_2018/: pipeline.py  requirements.txt
brainsets/brainsets_pipelines/vollan_moser_alternating_2025/: pipeline.py
brainsets/docs/: Makefile  README.md  requirements.txt
brainsets/docs/source/: api_reference.py  conf.py  index.rst
brainsets/docs/source/_ext/: custom_autosummary.py
brainsets/docs/source/_static/: style.css
brainsets/docs/source/_static/css/: custom.css
brainsets/docs/source/_templates/: base.rst
brainsets/docs/source/_templates/autosummary/: class_dataset.rst  only_class.rst
brainsets/docs/source/api/: index.rst.template  module.rst.template
brainsets/docs/source/cli/: commands.rst
brainsets/docs/source/concepts/: create_pipeline.rst  openneuro_pipeline.rst  prepare_data.rst  using_existing_data.rst
brainsets/docs/source/datasets/: index.rst
brainsets/docs/source/glossary/: brainsets.rst
brainsets/docs/source/guides/: create_pipeline.rst  index.rst  openneuro_pipeline.rst  prepare_data.rst  using_existing_data.rst
brainsets/docs/source/package/: brainsetpipeline.rst  core.rst  descriptions.rst  processing.rst  taxonomy.rst  utils.rst
brainsets/docs/source/package/datasets/: index.rst
brainsets/pipelines/perich_miller_population_2018/: Snakefile
brainsets/tests/: test_bids_utils.py  test_cli.py  test_descriptions.py  test_misc_utils.py  test_mne_utils.py  test_neuroprobe2025_dataset.py  test_neuroprobe2025_pipeline.py  test_openneuro_dataset.py  test_openneuro_pipeline.py  test_openneuro_s3.py  test_read_inline_metadata.py  test_s3_utils.py  test_signal.py  test_split_utils.py  test_version.py  test_vollan_pipeline.py
brainsets_pipelines/allen_visual_coding_ophys_2016/: pipeline.py  session_ids.txt  split.py
brainsets_pipelines/churchland_shenoy_neural_2012/: pipeline.py
brainsets_pipelines/flint_slutzky_accurate_2012/: pipeline.py
brainsets_pipelines/kemp_sleep_edf_2013/: pipeline.py
brainsets_pipelines/klinzing_sleep_ds005555/: pipeline.py
brainsets_pipelines/kochi_visualnaming_ds006914/: pipeline.py
brainsets_pipelines/neuroprobe_2025/: pipeline.py
brainsets_pipelines/odoherty_sabes_nonhuman_2017/: pipeline.py
docs/: MISSING_DOCUMENTATION_REPORT.md  README.md  requirements.txt
howto/: MAINTAIN.md  MIGRATE_TO_v0.2.md
merge_scripts/: brainsets_commit.txt  merger.sh  temporaldata_commit.txt  torch_brain_commit.txt
notebooks/: model_writing_tutorial.ipynb  team_layer_v.ipynb
scripts/: calculate_normalization_scales.py
temporaldata/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
tests/: _test_old_dataset_sim.py  test_attention.py  test_binning.py  test_buffer.py  test_collate.py  test_container.py  test_dataset_real.py  test_dataset_sim.py  test_eeg_deepconvnet.py  test_eeg_eegnet.py  test_eeg_shallownet.py  test_infinite_vocab_embedding.py  test_lora.py  test_masking_transforms.py  test_metric_group.py  test_metric_wrapper.py  test_metric_wrapper_distributed.py  test_multitask_decoding_stitch_evaluator.py  test_multitask_metric_group_with_stitcher.py  test_new_dataset.py  test_patching.py  test_poco.py  test_poyo.py  test_poyo_dataset_schema.py  test_poyo_plus.py  test_preprocessing.py  test_random_noise.py  test_random_time_scaling.py  test_region_selection.py  test_registry.py  test_resampling.py  test_rotary_attention.py  test_sampler.py  test_select_by_region.py  test_shallownet.py  test_singletask_mteric_group_with_stitcher.py  test_stitch.py  test_stitcher_evaluator.py  test_stitcher_sampler.py  test_stitcher_sampler_wrapper.py  (+5 more)
torch_brain/: __init__.py  _version.py  optim.py  registry.py
(+585 files in other folders)
