[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_brain"
dynamic = ["version"]
description = "A package for deep learning models for neuroscience"
readme = "README.md"
authors = [
    { name = "Mehdi Azabou", email = "mehdiazabou@gmail.com" },
    { name = "Vinam Arora", email = "vinam@seas.upenn.edu" },
]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "temporaldata>=0.1.4",
    "numpy",
    "torch~=2.0",
    "einops~=0.6.0",
    "torchtyping~=0.1",
    "torchmetrics>=1.6.0",
    "pydantic~=2.0",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest<9",
    "black==24.2.0",
    "pre-commit>=3.5.0",
    "omegaconf",  # TODO: only needed for old Dataset, remove after cleanup
    "flake8",
    "boto3",
    "tqdm",
    "pytest-cov",
    "brainsets",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "sphinx-autodoc-typehints",
    "sphinx-inline-tabs",
    "sphinx-rtd-theme",
    "sphinx-tabs",
    "bokeh==3.4.3",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinxcontrib-sass",
    "sphinx-exec-code",
]

[project.urls]
Homepage = "https://github.com/neuro-galaxy/torch_brain"
Issues = "https://github.com/neuro-galaxy/torch_brain/issues"
Documentation = "https://torch-brain.readthedocs.io/en/latest/"

[tool.setuptools]
packages = [
    "torch_brain",
    "torch_brain.data",
    "torch_brain.dataset",
    "torch_brain.nn",
    "torch_brain.models",
    "torch_brain.utils",
    "torch_brain.transforms",
]
