[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_brain"
dynamic = ["version"]
description = "A package for deep learning models for neuroscience"
readme = "README.md"
authors = [{ name = "TorchBrain Team", email = "contact@torchbrain.org" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.0.0",
    "h5py>=3.0.0",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest<9",
    "black==24.2.0",
    "pre-commit>=3.5.0",
    "omegaconf",  # TODO: only needed for old Dataset, remove after cleanup
    "flake8",
    "boto3",
    "tqdm",
    "pytest-cov",
    "scikit-learn>=1.6.1",
    "mne~=1.11.0",
    "boto3~=1.41.0",
    "mne-bids",
    "dandi",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "myst-nb",
    "sphinx-autodoc-typehints",
    "sphinx-inline-tabs",
    "sphinx-rtd-theme",
    "sphinx-tabs",
    "bokeh==3.4.3",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinxcontrib-sass",
    "omegaconf",  # TODO: only needed for old Dataset, remove after cleanup
]

[project.urls]
Homepage = "https://github.com/neuro-galaxy/torch_brain"
Issues = "https://github.com/neuro-galaxy/torch_brain/issues"
Documentation = "https://torch-brain.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
include = ["torch_brain*"]

[project.scripts]
brainsets = "torch_brain.pipeline._cli:cli"
